--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <script>
-      setTimeout(4000, function () {
+      alert("Hola1");
+      setTimeout(100, function () {
         alert("Hola");
       });
     </script>
